# DSAI_Lab_Project

./: .gitattributes  .gitignore  Comprehensive Technical Documentation.md  Final_Project_Report.md  Milestone 3_Architecture_Group1.md  Milestone 4_Model_Group1_speechpart.md  Milestone 4_Model_Group1_textpart.md  Milestone 5_Evaluation_Group1_speechpart.md  Milestone 5_Evaluation_Group1_textpart.md  Milestone 6_Comprehensive Technical Documentation-part2.md  Milestone 6_Deployment Deliverable.md  Milestone 6_Speech_Group1.md  Project_Executive_Summary.md  README.md
app/: app.py  app_text.py  pyproject.toml
doc/: overview.md  technical_overview.md  user_guide.md
docs/: Comprehensive Technical Documentation.md  Milestone 3_Architecture_Group1.md  Milestone 4_Model_Group1.md  Milestone 5_Evaluation_Group1.md  Milestone 6_Deployment Deliverable.md  overview.md  technical_doc.md  user_guide.md
models/: README.md
models/distilled-student-peft-adapter/: README.md  adapter_config.json  tokenizer.json
models/whisper-app/: DEPLOYMENT.md  README.md  app.py  generation_config.json  model.safetensors  pyproject.toml  requirements.txt
notebooks/speech/: data-prep.ipynb  dlai-lab-group1.ipynb  finetune_code.ipynb  llama3_2.ipynb
notebooks/text/: DSAIL_M2_part1.ipynb  autosoap-ai-powered-clinical-documentation.ipynb  dsail-llm-inference.ipynb  dsail-llm-part_ver1.ipynb  dsail-llm-part_ver2.ipynb
notebooks/vision/: OCR.ipynb  readme.md
whisper-app/: .gitignore
