[project]
name = "whisper-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "gradio==3.50.2",
    "librosa>=0.10.0",
    "numpy>=1.21.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.35.0",
]
